dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(template, 0.1)
AM_CONFIG_HEADER(include/config.h)

AC_PROG_CC

AC_C_CONST

case "$target" in
	*-*-mingw32*)
		MATHLIB=""
		SYS_GL_LIBS="-lopengl32 -lglu32"
		;;
	*-*-beos*)
		MATHLIB=""
		SYS_GL_LIBS="-lGL"
		;;
	*-*-linux*)
		MATHLIB="-lm"
		SYS_GL_LIBS="-L/usr/X11R6/lib -lGL"
		;;
	*)
		MATHLIB="-lm"
		SYS_GL_LIBS="-lGL"
		;;
esac
AC_SUBST(MATHLIB)

SDL_VERSION=1.1.0
AM_PATH_SDL($SDL_VERSION,
	:,
	AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
)
CFLAGS="$CFLAGS -Wall -Wextra -pipe $SDL_CFLAGS"

AC_MSG_CHECKING(for OpenGL support)
have_opengl=no
AC_TRY_COMPILE([
#include <GL/gl.h>
],[
],[
have_opengl=yes
])
AC_MSG_RESULT($have_opengl)
if test x$have_opengl = xyes; then
	GL_LIBS="$SDL_LIBS $SYS_GL_LIBS $MATH_LIB"
else
	AC_MSG_ERROR(Unable to find OpenGL headers and libraries)
fi

AC_CHECK_HEADERS([stdint.h stdlib.h errno.h string.h])
AC_CHECK_HEADERS([altivec.h], [ CFLAGS="$CFLAGS -mabi=altivec" ])

SDL_LIBS="$LIBS $GL_LIBS"
AC_SUBST(SDL_LIBS)

AC_OUTPUT([
Makefile
src/Makefile
])
